<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="timereg.roninit.dk.timereg.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="80"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_test_notification"
        android:orderInCategory="100"
        android:title="Test notification"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_submit"
        android:orderInCategory="96"
        android:title="@string/submit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_preview"
        android:orderInCategory="95"
        android:title="@string/action_preview"
        app:showAsAction="never" />
</menu>
