<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="timereg.roninit.dk.timereg.MainActivityFragment"
    tools:showIn="@layout/activity_main">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            style="@android:style/Widget.Holo.Spinner"
            android:layout_gravity="center_horizontal"
            android:hint="Dato"
            android:inputType="date"
            android:onClick="showDatePickerDialog"
            android:textSize="20sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/day_total_hours"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                />

            <TextView
                android:id="@+id/total_hours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="7.0 timer"
                android:paddingRight="@dimen/activity_horizontal_margin"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/tab_time_periode_total"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                />

            <TextView
                android:id="@+id/week_total_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="7.0 timer"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_todays_total"
            android:textSize="24sp"
            android:textStyle="bold"
            android:background="#ebe8e8"
            android:paddingBottom="@dimen/appbar_padding_top"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/appbar_padding_top"
            />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true" >

            <ListView
                android:id="@+id/listView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </ScrollView>

</LinearLayout>


